--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,24 +552,32 @@ main {
 
 .service-item-title { margin-bottom: 7px; }
 
+.service2-item-title { text-align: right; }
+
 .service-item-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
-  font-weight: var(--fw-3);
-  line-height: 1.6;
+  font-weight: var(--fw-400) ;
+  line-height: 2 ;
 }
 
 
 /**
- * #testimonials 
+ * #Experience  
  */
 
 .testimonials { margin-bottom: 30px; }
 
-.testimonials-title { margin-bottom: 20px; }
+.testimonials-title { 
+  text-align: center;
+  margin-bottom: 20px;
+ }
 
 .testimonials-list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 15px;
@@ -583,32 +591,73 @@ main {
 }
 
 .testimonials-item {
-  min-width: 100%;
+ 
   scroll-snap-align: center;
 }
 
 .testimonials-avatar-box {
   position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(15px, -25px);
+  top: 0%;
+  left: 30%;
+  transform: translate(-50%, -50%);
   background: var(--bg-gradient-onyx);
   border-radius: 14px;
   box-shadow: var(--shadow-1);
 }
 
-.testimonials-item-title { margin-bottom: 7px; }
+
+.testimonials-item-title { 
+  padding-top: 10%;
+  padding-left: 3%;
+  margin-bottom: 7px; }
+
+.testimonials-item-noranda { 
+  padding-top: 10%;
+  padding-left: 13%;
+  margin-bottom: 7px; }
+
+.testimonials-item-noranda2 { 
+  padding-left: 28%;
+  margin-bottom: 15px; }
+
+.testimonials-item-kcollege{
+
+  padding-top: 10%;
+  padding-left: 23%;
+  margin-bottom: 7px;
+
+}
+
+.testimonials-item-kcollege2{
+
+  padding-left: 36%;
+  margin-bottom: 15px;
+}
+
+
+
+.bulletpoint-excla li::marker {
+  content: '💭' ;
+}
+
+.bulletpoint-excla li {
+padding-bottom: 7px;
+padding-left: 0.50em ;
+}
 
 .testimonials-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
-  display: -webkit-box;
+
+  /* Removed Webkitbox thingy  */
+
+  /* display: -webkit-box;
   line-clamp: 4;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
-  overflow: hidden;
+  overflow: hidden; */
 }
 
 
@@ -730,7 +779,9 @@ main {
  * #Programming Languages 
  */
 
-.programminglanguages { margin-bottom: 15px; }
+.programminglanguages { 
+  
+  margin-bottom: 15px; }
 
 .programminglanguages-list {
   display: flex;
@@ -766,7 +817,8 @@ main {
  * #Tools
  */
 
-.tools { margin-bottom: 15px; }
+.tools { 
+  margin-bottom: 15px; }
 
 .tools-list {
   display: flex;
@@ -786,6 +838,10 @@ main {
 .tools-item {
   min-width: 10%;
   scroll-snap-align: start;
+}
+
+.tools-item-stata {
+ margin-top: 10px ;
 }
 
 /**
