--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1206,9 +1206,9 @@ main {
   transition: width 0.5s ease;
 }
 
-.progress-c {
+.progress-bash {
   height: 100%;
-  width: 20%;
+  width: 40%;
   background-color: #fffb1d;
   transition: width 0.5s ease;
 }
@@ -1390,8 +1390,16 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px 0;
+  margin: 50px ;
 }
+
+.sportspic-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: -100px;
+}
+
 
 
 .profile-pic {
@@ -1403,6 +1411,38 @@ main {
   margin-bottom: 20px;
 }
 
+.chessrating {
+  width: 700px;
+  height: 700px;
+  /* border-radius: 10%; */
+  /* margin-right: 20px; */
+  /* margin-left: -120px; */
+  object-fit: contain;
+  margin-bottom: 20px;
+  margin-top: -40px;
+}
+
+.chess-icon {
+   width: 45px;    
+   margin-left: 10px;
+    display: inline-block;
+    vertical-align : text-bottom;
+}
+
+.chess-text {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  color: var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+}
+
+
+
+
+
+
 .bio-text {
   padding-top: 50px;
   display: flex;
@@ -1410,6 +1450,10 @@ main {
   color: var(--light-gray);
   font-weight: var(--fw-300);
   line-height: 1.6;
+}
+
+.bio-text p {
+  margin-bottom: 15px; 
 }
 
 @media screen and (min-width: 768px) {
@@ -1435,6 +1479,21 @@ main {
   text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
+}
+
+.chess-section-title {
+  text-align: center;
+  display: inline-block;
+  padding-bottom: -100px;
+  padding-left: 350px;
+}
+
+
+.mv-section-title{
+  text-align: center;
+  display: inline-block;
+  padding-bottom: -100px;
+  padding-left: 250px;
 }
 
 .faq-content {
